[package]
name = "vulpix"
version = "0.1.0"
edition = "2021"

[dependencies]
# web stack
axum = "0.6.18"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.15.0", features = ["full"]}
# aws
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
# img processing
magick_rust = {version = "0.18.0", features = ["disable-hdri"]}
md5 = "0.7.0"
