[package]
name = "vulpix"
version = "1.0.0"
edition = "2021"
description = "An image processing service."
repository = "https://github.com/apolloagriculture/vulpix"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.31.0", features = ["full"]}
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0"
# img processing
magick_rust = {version = "0.19.1", features = ["disable-hdri"]}
# utils
md5 = "0.7.0"
anyhow = "1.0"
async-trait = "0.1.74"
